loggerhead (1.17+bzr428-1) UNRELEASED; urgency=low

  [ Andrew Starr-Bochicchio ]
  * debian/control:
   - Recommend python-pygments to support syntax-highlighting. (LP: #607775)
   - Add Vcs-Browser field.
   - Bump Standards-Version to 3.9.1, no-changes needed.

  [ Jelmer Vernooij ]
  * New upstream snapshot.

 -- Jelmer Vernooij <jelmer@debian.org>  Sun, 10 Oct 2010 02:44:47 +0200

loggerhead (1.17+bzr424-1) unstable; urgency=low

  * Use source format version 3.
  * Bump standards version to 3.8.4
  * Use new upstream snapshot.
   + Fixes import issues when running full Bazaar testsuite.

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 08 Feb 2010 01:17:39 +0100

loggerhead (1.17+bzr400-1) unstable; urgency=low

  * New upstream snapshot.

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 18 Jan 2010 18:33:40 +1300

loggerhead (1.17-1) unstable; urgency=low
  
  * New upstream release.  Loggerhead no longer flattens branch
    hierarchies (closes: #507001).

  [ Roland Mas ]
  * Use the YUI library provided by libjs-yui. (Closes: #511286)
  * Switch init script to use serve-branches rather than
    start-loggerhead (closes: #511295).

  [ Jelmer Vernooij ]
  * Use my debian.org address in Uploaders field.
  * Add ${misc:Depends} to please lintian.
  * Suggest recent version of paste, which doesn't expose internal port
    numbers in links. (Closes: #507000)
  * Bump standards version to 3.8.3.

  [ James Westby ]
  * New upstream release.
  * Drop get-orig-source rule in favour of debian/watch.
  * Add python-pkg-resources and python-paste to Build-Depends,
    python-pkg-resources to Depends and python-simplejson to
    Recommends due to dependency changes.

  [ Jelmer Vernooij ]
  * Remove references to bzrlib installation from example config file.

  [ Roland Mas ]
  * Added myself to Uploaders.
  * Documented version discrepancy between the YUI shipped by libjs-yui
    and the one used by Loggerhead, as well as a workaround to be used