@@ -8,8 +8,9 @@ loggerhead (1.17+bzr428-1) UNRELEASED; urgency=low
 
   [ Jelmer Vernooij ]
   * New upstream snapshot.
+  * Cope with bzrlib.util.configobj no longer existing.
 
- -- Jelmer Vernooij <jelmer@debian.org>  Sun, 10 Oct 2010 02:44:47 +0200
+ -- Jelmer Vernooij <jelmer@debian.org>  Sun, 10 Oct 2010 02:47:40 +0200
 
 loggerhead (1.17+bzr424-1) unstable; urgency=low
 
